--- a/linux/CMakeLists.txt
+++ b/linux/CMakeLists.txt
@@ -32,7 +32,12 @@ target_compile_definitions(${PLUGIN_NAME} PRIVATE FLUTTER_PLUGIN_IMPL)
 target_include_directories(${PLUGIN_NAME} PUBLIC
   "${CMAKE_CURRENT_SOURCE_DIR}/include")
 target_link_libraries(${PLUGIN_NAME} PRIVATE flutter)
-target_link_libraries(${PLUGIN_NAME} PRIVATE PkgConfig::GTK3)
+
+find_library(GTK3 gtk-3 REQUIRED)
+target_link_libraries(${PLUGIN_NAME} PRIVATE ${GTK3})
+find_library(GTK_LAYER_SHELL gtk-layer-shell REQUIRED)
+target_link_libraries(${PLUGIN_NAME} PRIVATE ${GTK_LAYER_SHELL})
+
 
 # List of absolute paths to libraries that should be bundled with the plugin.
 # This list could contain prebuilt libraries, or libraries created by an
