--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-  "cmake.sourceDirectory": "/home/sinan/Documents/WORKSPACE/PROJECTS/MODULUZ/fl_linux_window_manager/example/linux"
+  "cmake.sourceDirectory": "/home/sinan/Documents/WORKSPACE/PROJECTS/MODULUZ/fl_linux_window_manager/example/linux",
+  "files.associations": {
+    "ostream": "cpp"
+  }
 }
